--- a/email-templates/registration-confirmation.html
+++ b/email-templates/registration-confirmation.html
@@ -254,22 +254,37 @@
                     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="border-collapse:collapse; margin:0 0 14px 0;">
                       <tr>
                         <td style="padding:10px; border:1px solid #e5e7eb; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; font-size:12px; color:#111827;">
-                          14 Feb 2026 — Red Star Raceway (Rounds 1 &amp; 2)
+                          Round 1 — 14 February 2026 · Red Star Raceway
                         </td>
                       </tr>
                       <tr>
                         <td style="padding:10px; border:1px solid #e5e7eb; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; font-size:12px; color:#111827;">
-                          11 Apr 2026 — Vereeniging Kart Circuit (Rounds 3 &amp; 4)
+                          Round 2 — 21 March 2026 · Red Star Raceway
                         </td>
                       </tr>
                       <tr>
                         <td style="padding:10px; border:1px solid #e5e7eb; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; font-size:12px; color:#111827;">
-                          12 Jul 2026 — Formula K Kart Circuit (Round 5)
+                          Round 3 — 22 March 2026 · Red Star Raceway
                         </td>
                       </tr>
                       <tr>
                         <td style="padding:10px; border:1px solid #e5e7eb; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; font-size:12px; color:#111827;">
-                          07 Nov 2026 — Red Star Raceway (Round 6)
+                          Round 4 — 11 April 2026 · Vereeniging Kart Circuit
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="padding:10px; border:1px solid #e5e7eb; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; font-size:12px; color:#111827;">
+                          Round 5 — 11 July 2026 · Formula K Kart Circuit
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="padding:10px; border:1px solid #e5e7eb; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; font-size:12px; color:#111827;">
+                          Round 6 — 12 July 2026 · Formula K Kart Circuit
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="padding:10px; border:1px solid #e5e7eb; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; font-size:12px; color:#111827;">
+                          Round 7 — 07 November 2026 · Red Star Raceway
                         </td>
                       </tr>
                     </table>
