fix: enable vertical scrolling on admin table while keeping horizontal scroll

--- a/admin.html
+++ b/admin.html
@@ -226,7 +226,7 @@
       border-radius: 8px;
       border: 1px solid #404040;
       overflow-x: auto;
-      overflow-y: hidden;
+      overflow-y: auto;
       max-height: 600px;
     }
 
