style: compact table spacing for spreadsheet-like appearance

--- a/admin.html
+++ b/admin.html
@@ -233,13 +233,13 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      font-size: 12px;
+      font-size: 11px;
       min-width: 2000px;
     }
 
     th {
       background: #242424;
-      padding: 12px 8px;
+      padding: 6px 4px;
       text-align: left;
       font-weight: 600;
       color: #e0e0e0;
@@ -247,16 +247,20 @@
       position: sticky;
       top: 0;
       white-space: nowrap;
+      height: 30px;
+      line-height: 1;
     }
 
     td {
-      padding: 8px;
+      padding: 4px 4px;
       border-bottom: 1px solid #303030;
       color: #e0e0e0;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 150px;
+      max-width: 120px;
+      height: 28px;
+      line-height: 1.2;
     }
 
     tr:hover {
