fix: add missing id_or_passport_number and consent_signed fields to registration payload

--- a/driver_portal.html
+++ b/driver_portal.html
@@ -2813,6 +2813,7 @@
           date_of_birth: document.getElementById("r_dob").value.trim(),
           nationality: document.getElementById("r_nat").value.trim(),
           gender: document.getElementById("r_gender").value.trim(),
+          id_or_passport_number: document.getElementById("r_id").value.trim(),
 
           championship: document.getElementById("r_champ").value.trim(),
           class: document.getElementById("r_class").value.trim(),
@@ -2834,6 +2835,7 @@
           medical_conditions: document.getElementById("m_conditions").value.trim(),
           medical_medication: document.getElementById("m_medication").value.trim(),
           medical_doctor_phone: document.getElementById("m_doctor_phone").value.trim(),
+          consent_signed: document.getElementById("consent_signed").value,
           media_release_signed: document.getElementById("media_release_signed").value,
 
           // File uploads
