Add soft delete and CSV export features
- Add is_deleted, deleted_at, created_at columns to drivers table
- Implement /api/admin/deleteDriver endpoint with soft delete
- Implement /api/admin/restoreDriver endpoint
- Implement /api/admin/exportDriversCSV endpoint for CSV export
- Add delete button to admin driver list UI (red button with confirmation)
- Add CSV export button to admin filters bar (green button)
- Update getAllDrivers query to exclude soft-deleted drivers
- Add comprehensive error handling and audit logging
- Include 30-column CSV export with driver, contact, and medical data
- Run database migration to add required columns

--- a/driver_portal.html
+++ b/driver_portal.html
@@ -1999,163 +1999,12 @@
       const container = document.getElementById("paymentsContainer");
       if (!container) return;
 
-      let html = '';
-
-      // Mini ROK / Mini ROK U10
-      if (driverClass === "MINI ROK" || driverClass === "MINI ROK U/10") {
-        html = `
-          <div class="paymentCard">
-            <div class="paymentCard-title">Per Race Day</div>
-            <div class="paymentCard-desc">Engine rental for one race day</div>
-            <div class="paymentCard-price">R3,500</div>
-            <form name="PayFastPayNowForm" action="https://payment.payfast.io/eng/process" method="post" style="display:inline;">
-              <input type="hidden" name="cmd" value="_paynow">
-              <input type="hidden" name="receiver" value="18906399">
-              <input type="hidden" name="return_url" value="https://rokthenats.co.za/payment-success.html">
-              <input type="hidden" name="cancel_url" value="https://rokthenats.co.za/payment-cancel.html">
-              <input type="hidden" name="notify_url" value="https://rokthenats.co.za/api/payfast-itn">
-              <input type="hidden" name="amount" value="3500">
-              <input type="hidden" name="item_name" value="Mini - Per Race Day">
-              <input type="hidden" name="item_description" value="Engine rental for one race day">
-              <button type="submit" class="paymentCard-btn">Proceed to Payment</button>
-            </form>
-          </div>
-          <div class="paymentCard">
-            <div class="paymentCard-title">Weekend Rental</div>
-            <div class="paymentCard-desc">Engine rental for both days</div>
-            <div class="paymentCard-price">R5,800</div>
-            <form name="PayFastPayNowForm" action="https://payment.payfast.io/eng/process" method="post" style="display:inline;">
-              <input type="hidden" name="cmd" value="_paynow">
-              <input type="hidden" name="receiver" value="18906399">
-              <input type="hidden" name="return_url" value="https://rokthenats.co.za/payment-success.html">
-              <input type="hidden" name="cancel_url" value="https://rokthenats.co.za/payment-cancel.html">
-              <input type="hidden" name="notify_url" value="https://rokthenats.co.za/api/payfast-itn">
-              <input type="hidden" name="amount" value="5800">
-              <input type="hidden" name="item_name" value="Mini - Weekend Rental">
-              <input type="hidden" name="item_description" value="Engine rental for both days">
-              <button type="submit" class="paymentCard-btn">Proceed to Payment</button>
-            </form>
-          </div>
-          <div class="paymentCard">
-            <div class="paymentCard-title">Full Season</div>
-            <div class="paymentCard-desc">Engine rental for all 8 race days</div>
-            <div class="paymentCard-price">R23,200</div>
-            <form name="PayFastPayNowForm" action="https://payment.payfast.io/eng/process" method="post" style="display:inline;">
-              <input type="hidden" name="cmd" value="_paynow">
-              <input type="hidden" name="receiver" value="18906399">
-              <input type="hidden" name="return_url" value="https://rokthenats.co.za/payment-success.html">
-              <input type="hidden" name="cancel_url" value="https://rokthenats.co.za/payment-cancel.html">
-              <input type="hidden" name="notify_url" value="https://rokthenats.co.za/api/payfast-itn">
-              <input type="hidden" name="amount" value="23200">
-              <input type="hidden" name="item_name" value="Mini - Full Season">
-              <input type="hidden" name="item_description" value="Engine rental for all 8 race days">
-              <button type="submit" class="paymentCard-btn">Proceed to Payment</button>
-            </form>
-          </div>
-          <div class="paymentCard">
-            <div class="paymentCard-title">ALL IN OPTION</div>
-            <div class="paymentCard-desc">All race entries, engine rental, transponder, fuel and race tyres for 8 race days</div>
-            <div class="paymentCard-price">R75,640</div>
-            <form name="PayFastPayNowForm" action="https://payment.payfast.io/eng/process" method="post" style="display:inline;">
-              <input type="hidden" name="cmd" value="_paynow">
-              <input type="hidden" name="receiver" value="18906399">
-              <input type="hidden" name="return_url" value="https://rokthenats.co.za/payment-success.html">
-              <input type="hidden" name="cancel_url" value="https://rokthenats.co.za/payment-cancel.html">
-              <input type="hidden" name="notify_url" value="https://rokthenats.co.za/api/payfast-itn">
-              <input type="hidden" name="amount" value="75640">
-              <input type="hidden" name="item_name" value="Mini - ALL IN OPTION">
-              <input type="hidden" name="item_description" value="All race entries, engine rental, transponder, fuel and race tyres for 8 race days">
-              <button type="submit" class="paymentCard-btn">Proceed to Payment</button>
-            </form>
-          </div>
-        `;
-      }
-      // OK-J / OK-N
-      else if (driverClass === "OK-J" || driverClass === "OK-N") {
-        html = `
-          <div class="paymentCard">
-            <div class="paymentCard-title">Per Race Day</div>
-            <div class="paymentCard-desc">Engine rental for one race day</div>
-            <div class="paymentCard-price">R6,500</div>
-            <form name="PayFastPayNowForm" action="https://payment.payfast.io/eng/process" method="post" style="display:inline;">
-              <input type="hidden" name="cmd" value="_paynow">
-              <input type="hidden" name="receiver" value="18906399">
-              <input type="hidden" name="return_url" value="https://rokthenats.co.za/payment-success.html">
-              <input type="hidden" name="cancel_url" value="https://rokthenats.co.za/payment-cancel.html">
-              <input type="hidden" name="notify_url" value="https://rokthenats.co.za/api/payfast-itn">
-              <input type="hidden" name="amount" value="6500">
-              <input type="hidden" name="item_name" value="OK-J - Per Race Day">
-              <input type="hidden" name="item_description" value="Engine rental for one race day">
-              <button type="submit" class="paymentCard-btn">Proceed to Payment</button>
-            </form>
-          </div>
-          <div class="paymentCard">
-            <div class="paymentCard-title">Weekend Rental</div>
-            <div class="paymentCard-desc">Engine rental for both race days</div>
-            <div class="paymentCard-price">R13,000</div>
-            <form name="PayFastPayNowForm" action="https://payment.payfast.io/eng/process" method="post" style="display:inline;">
-              <input type="hidden" name="cmd" value="_paynow">
-              <input type="hidden" name="receiver" value="18906399">
-              <input type="hidden" name="return_url" value="https://rokthenats.co.za/payment-success.html">
-              <input type="hidden" name="cancel_url" value="https://rokthenats.co.za/payment-cancel.html">
-              <input type="hidden" name="notify_url" value="https://rokthenats.co.za/api/payfast-itn">
-              <input type="hidden" name="amount" value="13000">
-              <input type="hidden" name="item_name" value="OK-J - Weekend Rental">
-              <input type="hidden" name="item_description" value="Engine rental for both race days">
-              <button type="submit" class="paymentCard-btn">Proceed to Payment</button>
-            </form>
-          </div>
-          <div class="paymentCard">
-            <div class="paymentCard-title">Full Season</div>
-            <div class="paymentCard-desc">Engine rental for all 8 race days</div>
-            <div class="paymentCard-price">R44,000</div>
-            <form name="PayFastPayNowForm" action="https://payment.payfast.io/eng/process" method="post" style="display:inline;">
-              <input type="hidden" name="cmd" value="_paynow">
-              <input type="hidden" name="receiver" value="18906399">
-              <input type="hidden" name="return_url" value="https://rokthenats.co.za/payment-success.html">
-              <input type="hidden" name="cancel_url" value="https://rokthenats.co.za/payment-cancel.html">
-              <input type="hidden" name="notify_url" value="https://rokthenats.co.za/api/payfast-itn">
-              <input type="hidden" name="amount" value="44000">
-              <input type="hidden" name="item_name" value="OK-J - Full Season">
-              <input type="hidden" name="item_description" value="Engine rental for all 8 race days">
-              <button type="submit" class="paymentCard-btn">Proceed to Payment</button>
-            </form>
-          </div>
-          <div class="paymentCard">
-            <div class="paymentCard-title">ALL IN OPTION</div>
-            <div class="paymentCard-desc">All race entries, engine rental, transponder, fuel, and race tyres for 8 race days</div>
-            <div class="paymentCard-price">R107,760</div>
-            <form name="PayFastPayNowForm" action="https://payment.payfast.io/eng/process" method="post" style="display:inline;">
-              <input type="hidden" name="cmd" value="_paynow">
-              <input type="hidden" name="receiver" value="18906399">
-              <input type="hidden" name="return_url" value="https://rokthenats.co.za/payment-success.html">
-              <input type="hidden" name="cancel_url" value="https://rokthenats.co.za/payment-cancel.html">
-              <input type="hidden" name="notify_url" value="https://rokthenats.co.za/api/payfast-itn">
-              <input type="hidden" name="amount" value="107760">
-              <input type="hidden" name="item_name" value="OK-J - ALL IN OPTION">
-              <input type="hidden" name="item_description" value="All race entries, engine rental, transponder, fuel, and race tyres for 8 race days">
-              <button type="submit" class="paymentCard-btn">Proceed to Payment</button>
-            </form>
-          </div>
-        `;
-      }
-      // Cadet
-      else if (driverClass === "CADET") {
-        html = `
-          <div style="padding: 20px; text-align: center; color: #6b7280; background: #f3f4f6; border-radius: 6px;">
-            <p style="margin: 0; font-weight: 600;">Engine rental not available for CADET class</p>
-            <p style="margin: 8px 0 0 0; font-size: 14px;">CADET drivers compete with their own engines</p>
-          </div>
-        `;
-      }
-      // Default message if class not set
-      else {
-        html = `
-          <div style="padding: 20px; text-align: center; color: #6b7280;">
-            Select your class in the registration tab to see available payment options.
-          </div>
-        `;
-      }
+      let html = `
+        <div style="padding: 20px; text-align: center; color: #6b7280;">
+          <p style="margin: 0; font-weight: 600; font-size: 16px;">Registration Not Yet Open</p>
+          <p style="margin: 8px 0 0 0; font-size: 14px;">Pricing and entry details will be available soon. Please check back later.</p>
+        </div>
+      `;
 
       container.innerHTML = html;
     }
