--- a/driver_portal.html
+++ b/driver_portal.html
@@ -2806,7 +2806,7 @@
     /* ====== RACE ENTRY MODAL ====== */
     const entryModal = document.createElement('div');
     entryModal.id = 'raceEntryModal';
-    entryModal.style.cssText = 'display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 1000; padding: 16px; overflow-y: auto;';
+    entryModal.style.cssText = 'display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.5); z-index: 1000; padding: 16px; overflow-y: auto; align-items: center; justify-content: center;';
     entryModal.innerHTML = `
       <div style="background: white; max-width: 500px; margin: 40px auto; border-radius: 8px; box-shadow: 0 20px 25px rgba(0,0,0,0.15); max-height: 90vh; overflow-y: auto;">
         <!-- Header -->
@@ -2924,7 +2924,7 @@
 
     // Open entry modal
     document.getElementById('btnQuickEntry').addEventListener('click', function() {
-      document.getElementById('raceEntryModal').style.display = 'inset';
+      document.getElementById('raceEntryModal').style.display = 'flex';
     });
 
     // Setup race entry modal listeners after a brief delay to ensure DOM is ready
@@ -3047,7 +3047,6 @@
     })();
 
   </script>
-    const racePricingTiers = {
       'CADET': {
         class: 'CADET',
         entry: { name: 'Race Entry', price: 1950, required: true },
