FEATURE: Use actual driver email for PayFast payments instead of noreply

--- a/driver_portal.html
+++ b/driver_portal.html
@@ -3074,8 +3074,8 @@
               const amount = totalPrice.replace('R', '').replace(/\s/g, '').replace(',', '.').trim();
               console.log('🔍 Amount after cleaning:', amount);
               toast('info', 'Redirecting to PayFast payment...');
-              // Redirect to PayFast payment
-              window.location.href = '/api/initiateRacePayment?class=' + encodeURIComponent(driverClass) + '&amount=' + amount;
+              // Redirect to PayFast payment with driver email
+              window.location.href = '/api/initiateRacePayment?class=' + encodeURIComponent(driverClass) + '&amount=' + amount + '&email=' + encodeURIComponent(currentEmail);
             }
           }
         });
